--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -46,10 +46,6 @@ html {
 
 @media screen and (min-width: $break-sm) {
   .App {
-  }
-}
-@media screen and (min-width: $break-md) {
-  .App {
     grid-template-areas:
       "brand-img navigation"
       "search-bar search-bar"
@@ -57,6 +53,18 @@ html {
 
     // grid-template-rows: ;
     grid-template-columns: 200px 1fr;
+    grid-template-rows: 100px 2em auto;
+  }
+}
+@media screen and (min-width: $break-lg) {
+  .App {
+    grid-template-areas:
+      "brand-img navigation navigation"
+      "search-bar search-bar search-bar"
+      "main main main";
+
+    // grid-template-rows: ;
+    grid-template-columns: 200px 1fr 1fr;
     grid-template-rows: 100px 2em auto;
   }
 }
