--- a/client/src/controllers/Header/Header.scss
+++ b/client/src/controllers/Header/Header.scss
@@ -9,7 +9,7 @@ html {
 }
 .Header {
   /* grid-row: var(--Header-row-start) / var(--Header-row-end); */
-  display: contents;
+  // display: contents;
   /* flex-direction: column; */
   /* grid-template-columns: 1fr;
   grid-template-rows: 2fr 1fr 1fr; */
