--- a/client/src/controllers/Products/Card/Card.scss
+++ b/client/src/controllers/Products/Card/Card.scss
@@ -1,4 +1,5 @@
 @import "../../../breakpoints.scss";
+@import "../../../palette.scss";
 
 $padding: 2%;
 $img-base-width: 50px;
@@ -16,6 +17,7 @@ $img-base-width: 50px;
   border-right: 1px solid black;
   display: flex;
   flex-direction: column;
+  background-color: $color5;
   flex-wrap: wrap;
 
   img {
